Update style of store marker to wrap address correctly.

--- a/client/style/geo.scss
+++ b/client/style/geo.scss
@@ -101,14 +101,15 @@
 .store-info {
   width: 250px;
   min-height: 60px;
-  padding: 5px 0 5px 0;
+  padding: 5px 5px 5px 5px;
   background: white;
   border: 2px solid $accentColor;
   border-radius: 2px;
   position: absolute;
   bottom: 31px;
   left: -144px;
-  font-size: 0.92em;
+  // font-size: 0.92em;
+  text-align: center;
   color: black;
   margin: auto;
   cursor: pointer;
